# RackTrack

./: .replit  README.md  manage.py  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.js
.local/state/replit/agent/: .latest.json  warehouse_project_roadmap.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-You-are-to-build-a-complete-Warehouse-Pallet-Racking-Inspection-Certification-Management-System-us-1755142511275_1755142511275.txt
client/src/: App.tsx
client/src/components/inspection/: inspection-panel.tsx
client/src/components/layout/: header.tsx  sidebar.tsx
client/src/components/reports/: report-preview.tsx
client/src/components/warehouse/: canvas.tsx  component-properties.tsx
client/src/hooks/: useUrgentItems.ts
client/src/pages/: dashboard.tsx  inspection.tsx  landing.tsx  layout-editor.tsx  reports.tsx  users.tsx
core/: admin.py  forms.py  models.py  urls.py  views.py
core/management/commands/: create_sample_data.py
core/templatetags/: core_tags.py
server/: index.ts  replitAuth.ts  routes.ts  seed-data.ts  storage.ts
shared/: schema.ts
static/css/: main.css
static/fontawesome/css/: all.min.css
static/js/: alpine-extensions.js  inspection.js  layout-editor.js
templates/: base.html  dashboard.html  inspection.html  layout_editor.html  reports.html  users.html
templates/components/: dashboard_content.html  header.html  layout_content.html  sidebar.html
warehouse_inspection/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
