[build-system]
requires = ["setuptools", "wheel"]

[tool.uv]
dev-dependencies = [
    "pytest-django>=4.8.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "warehouse_inspection.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
